<resources>
    <string name="app_name" translatable="false">HandyCraft.LK</string>
    <string name="AdminDashboard" translatable="false">Admin Dashboard</string>
    <string name="Orders" translatable="false">" Orders:-"</string>
    <string name="Orders1" translatable="false">Orders:-</string>
    <string name="Users" translatable="false">Users :-</string>
    <string name="Products" translatable="false">Products :-</string>
    <string name="Categories" translatable="false">Categories :-</string>
    <string name="WeeklySales" translatable="false">Weekly Sales</string>
    <string name="Categories1" translatable="false">Categories</string>
    <string name="AddNewCategory" translatable="false">Add New Category</string>
    <string name="WoodCraving" translatable="false">Wood Craving</string>
    <string name="LacquerProducts" translatable="false">Lacquer Products</string>
    <string name="Handloom" translatable="false">Handloom</string>
    <string name="CoconutProducts" translatable="false">Coconut Products</string>
    <string name="Productlist" translatable="false">Product list</string>
    <string name="Product1" translatable="false">Product 1</string>
    <string name="Category" translatable="false">Category:</string>
    <string name="Description" translatable="false">Description:</string>
    <string name="Price" translatable="false">Price:</string>
    <string name="Product2" translatable="false">Product 2</string>
    <string name="ClearHistory" translatable="false">Clear History</string>
    <string name="Name" translatable="false">Name:</string>
    <string name="Users1" translatable="false">Users</string>
    <string name="Customers" translatable="false">Customers</string>
    <string name="Sellers" translatable="false">Sellers</string>
    <string name="user1" translatable="false">User 1</string>
    <string name="user2" translatable="false">User 2</string>
    <string name="user3" translatable="false">User 3</string>
    <string name="user4" translatable="false">User 4</string>
    <string name="UserProfile" translatable="false">User Profile</string>
    <string name="UserID" translatable="false">User ID:</string>
    <string name="UserName" translatable="false">User Name:</string>
    <string name="Email" translatable="false">Email:</string>
    <string name="Mobile" translatable="false">Mobile:</string>
    <string name="Status" translatable="false">Status:</string>
    <string name="Tools" translatable="false">Tools</string>
    <string name="ManageUsers" translatable="false">Manage Users</string>
    <string name="ManageCategory" translatable="false">Manage Category</string>
    <string name="InputSearchKeyword" translatable="false">Input Search Keyword</string>
    <string name="Active1" translatable="false">Active</string>
    <string name="SellerCenter" translatable="false">Seller Center</string>
    <string name="sellername" translatable="false">denuwanODTravel(PVT)Ltd</string>
    <string name="TotalSales" translatable="false">Total Sales</string>
    <string name="TotalSalesCount" translatable="false">1000+</string>
    <string name="TotalOrders" translatable="false">Total Orders</string>
    <string name="PendingOrderCount" translatable="false">2</string>
    <string name="ApprovedOrderCount" translatable="false">5</string>
    <string name="Approved" translatable="false">Approved</string>
    <string name="Pending" translatable="false">Pending</string>
    <string name="Returned" translatable="false">Returned</string>
    <string name="returnCount" translatable="false">10</string>
    <string name="addProduct" translatable="false">Add product</string>
    <string name="productName" translatable="false">Product Name  *</string>
    <string name="Lamp" translatable="false">Lamp made from coconut shells</string>
    <string name="category" translatable="false">Category  *</string>
    <string name="Set" translatable="false">Set</string>
    <string name="description" translatable="false">Description  *</string>
    <string name="desc_info" translatable="false">xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx</string>
    <string name="price" translatable="false">Price  *</string>
    <string name="priceValue" translatable="false">Rs 5000.00</string>
    <string name="Confirm" translatable="false">Confirm</string>
    <string name="Cancel" translatable="false">Cancel</string>
    <string name="input" translatable="false">Input Search Keywords</string>
    <string name="Me" translatable="false">Me</string>
    <string name="SellerID" translatable="false">Seller ID:</string>
    <string name="S123456789" translatable="false">S123456789</string>
    <string name="ShopName" translatable="false">Shop Name:</string>
    <string name="SellerAccount" translatable="false">Seller Account</string>
    <string name="Notifications" translatable="false">Notifications</string>
    <string name="About" translatable="false">About</string>
    <string name="LogOut" translatable="false">Log Out</string>
    <string name="LoginEmailAddress" translatable="false">Login Email Address</string>
    <string name="email" translatable="false">xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx</string>
    <string name="PhoneNumber" translatable="false">Phone Number</string>
    <string name="phone" translatable="false">071XXXXXXX</string>
    <string name="ChangePassword" translatable="false">Change Password</string>
    <string name="AddedProducts" translatable="false">Added Products</string>
    <string name="Update" translatable="false">Update</string>
    <string name="Delete" translatable="false">Delete</string>
    <string name="yaka" translatable="false">yaka</string>
    <string name="handycraft" translatable="false">HandyCraft.LK</string>
    <string name="yakaa" translatable="false">yakaa</string>
    <string name="h" translatable="false">H</string>
    <string name="todo" translatable="false">TODO</string>
    <string name="welcome" translatable="false">Welcome Back</string>
    <string name="signto" translatable="false">Sign to Continue</string>
    <string name="edtemil" translatable="false">Enter Your Email</string>
    <string name="forgot" translatable="false">Forgot Password?</string>
    <string name="btnlogin" translatable="false">Login</string>
    <string name="tv_donthave" translatable="false">Don\'t have account?</string>
    <string name="createacc" translatable="false">create a new account</string>
    <string name="password" translatable="false">Enter Your Password</string>
    <string name="createAccout" translatable="false">Create Account</string>
    <string name="tv_createnew" translatable="false">Create a new account</string>
    <string name="name" translatable="false">Enter Your Name</string>
    <string name="namee" translatable="false">Name</string>
    <string name="pwd" translatable="false">Password</string>
    <string name="reEnterPwd" translatable="false">Confirm Password</string>
    <string name="btncreateacc" translatable="false">Create Account</string>
    <string name="tv_already" translatable="false">"Already have a account? "</string>
    <string name="loginn" translatable="false">Login</string>
    <string name="back" translatable="false">back</string>
    <string name="search" translatable="false">Search...</string>
    <string name="searc" translatable="false">Search</string>
    <string name="yellowback" translatable="false">Yellow</string>
    <string name="iv_white" translatable="false">white</string>
    <string name="icon" translatable="false">icon</string>
    <string name="item1" translatable="false">Ship made of Coconut shell</string>
    <string name="item1Price" translatable="false">Rs. 1500</string>
    <string name="item4" translatable="false">item4</string>
    <string name="item1back" translatable="false">item1back</string>
    <string name="item1img" translatable="false">item1img</string>
    <string name="item2img" translatable="false">item2img</string>
    <string name="item3img" translatable="false">item3img</string>
    <string name="coconutshell" translatable="false">Coconut shell Tea Set</string>
    <string name="rs2500" translatable="false">Rs. 2500</string>
    <string name="btnAddToCart" translatable="false">Add to cart</string>
    <string name="item_2" translatable="false">Ecofriendly Palmyra shopping Reed basket</string>
    <string name="item_3" translatable="false">Traditional masks of Srianka</string>
    <string name="itembox" translatable="false">itembox</string>
    <string name="elep" translatable="false">Sri Lankan Handmade Wooden Elephant</string>
    <string name="Dream_Catcher" translatable="false">Handmade Dream Catcher</string>
    <string name="HandicraftPouchPurse" translatable="false">Handmade Handicraft Pouch/Purse</string>
    <string name="cart" translatable="false">CART</string>
    <string name="welcomee" translatable="false">Welcome...</string>
    <string name="num1" translatable="false">1</string>
    <string name="checkout" translatable="false">Checkout</string>
    <string name="num3" translatable="false">3</string>
    <string name="svUserAccount" translatable="false">UserAccount</string>
    <string name="myaccount" translatable="false">My Account</string>
    <string name="cart_" translatable="false">My Cart</string>
    <string name="username" translatable="false">Janith K. Gunathilake</string>
    <string name="uname" translatable="false">\@janikavi2344</string>
    <string name="editprofile" translatable="false">Edit Profile</string>
    <string name="edit" translatable="false">Edit</string>
    <string name="userinfo" translatable="false">User Info</string>
    <string name="userAcc" translatable="false">Account Infomation</string>
    <string name="purchase" translatable="false">Purchase History</string>
    <string name="message" translatable="false">Message</string>
    <string name="returnreq" translatable="false">Return Request</string>
    <string name="item" translatable="false">Item</string>
    <string name="logout" translatable="false">LOGOUT</string>
    <string name="emailadd" translatable="false">janikavi119@gmail.com</string>
    <string name="number" translatable="false">074 2345678</string>
    <string name="cusid" translatable="false">Cus ID</string>
    <string name="cusiid" translatable="false">CUS_00023</string>
    <string name="mobile" translatable="false">Mobile</string>
    <string name="passwordt" translatable="false">Password</string>
    <string name="pw" translatable="false">******************</string>
    <string name="tvSwitch" translatable="false">Register as :- </string>
    <string name="buyer" translatable="false">Buyer</string>
    <string name="seller" translatable="false">Seller</string>
    <string name="cont" translatable="false">Continue</string>
    <string name="address" translatable="false">Address</string>
    <string name="about" translatable="false">About Us</string>
    <string-array name="role">
        <item>Select</item>
        <item>Buyer</item>
        <item>Seller</item>
    </string-array>
    <string name="done" translatable="false">Done</string>
    <string name="delete" translatable="false">Delete</string>
    <string name="place" translatable="false">Place Order</string>
    <string name="total" translatable="false">Total</string>
    <string name="totalcal" translatable="false">Rs. 1250.00</string>
    <string name="tship" translatable="false">Total Shipping</string>
    <string name="visa" translatable="false">Visa 4216*****2255</string>
    <string name="addresscus" translatable="false">W.G.N.Kamal                                                               Dissanayake Address sample 56/9 address sample Dissanayake Address sample 56/9 address sample</string>
    <string name="Pendingseller" translatable="false">Pending</string>
    <string name="Processing" translatable="false">Processing</string>
    <string name="InDelivery" translatable="false">In Delivery</string>
</resources>