<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E2E2E2"
    tools:context=".SingleProductView">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="350dp"
        android:layout_height="350dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="28dp"
        android:contentDescription="@string/item1img"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView"
        app:srcCompat="@drawable/_b4c845172c02f5e0ca1addee2809247" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:cardBackgroundColor="#FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView29"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:layout_marginStart="130dp"
            android:layout_marginTop="10dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/item"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="30sp" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:contentDescription="@string/back"
            app:srcCompat="@drawable/back_button"
            tools:ignore="ImageContrastCheck" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView4"
        android:layout_width="352dp"
        android:layout_height="257dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="31dp"
        app:cardBackgroundColor="#FFFFFF"
        app:cardCornerRadius="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3">

        <TextView
            android:id="@+id/tvProName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/coconutshell"
            android:textColor="#000000"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tvProPrice"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="250dp"
            android:layout_marginTop="10dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/rs2500"
            android:textColor="#000000"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tvProDescription"
            android:layout_width="310dp"
            android:layout_height="126dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="55dp"
            android:layout_marginRight="20dp"
            android:text="@string/coconutshell"
            android:textAlignment="center"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btnAddToCart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="200dp"
            android:backgroundTint="@color/btnYellow"
            android:fontFamily="sans-serif-black"
            android:text="@string/btnAddToCart"
            android:textColor="#FFFFFF"
            app:cornerRadius="50dp" />

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>
